--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --timeout 10000|| true "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@mhhwang2002/mongograph": "^1.0.0"
+    "@mhhwang2002/mongograph": "^1.0.0",
+    "agraph": "^2.1.3"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0"
   }
 }
