--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --timeout 10000|| true "
+    "test": "mocha --timeout 10000|| true ",
+    "only-test": "mocha --inspect-brk test/1_TestXMLDataInput.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@mhhwang2002/mongograph": "^1.0.0",
-    "agraph": "^2.1.3"
+    "agraph": "^2.1.3",
+    "dom-parser": "^0.1.5",
+    "xmldom": "^0.1.27"
   },
   "devDependencies": {
     "chai": "^4.2.0",
